--- a/TemRemedioAi/app/src/main/res/layout/card_list_medicine.xml
+++ b/TemRemedioAi/app/src/main/res/layout/card_list_medicine.xml
@@ -160,11 +160,10 @@
                 android:textColor="@color/colorPrimaryText"
                 android:singleLine="false"
                 android:elevation="0dp"
-                android:layout_alignParentEnd="false"
+                android:layout_alignParentEnd="true"
                 android:layout_marginBottom="8dp"
                 android:layout_alignParentBottom="false"
-                android:layout_below="@+id/textViewLastInformation3"
-                android:layout_toLeftOf="@+id/buttonInformRemedio"/>
+                android:layout_below="@+id/textViewLastInformation3" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -179,7 +178,8 @@
                 android:elevation="0dp"
                 android:layout_marginBottom="8dp"
                 android:layout_below="@+id/textViewLastInformation3"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="false"
+                android:layout_toLeftOf="@+id/buttonSelectUbs" />
 
         </RelativeLayout>
     </RelativeLayout>
